<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.hihlo.ui.signup.view_model.SigninViewModel" />
    </data>
    
    <ScrollView
        android:background="@color/screen_background_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.signup.fragment.SigninFragment">

            <!-- Logo -->
            <ImageView
                android:id="@+id/appNameLogo"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/login_app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Welcome Text -->
            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginStart="17dp"
                android:text="@string/welcome_to_hihlo"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:fontFamily="@font/manrope_bold"
                app:layout_constraintTop_toBottomOf="@id/appNameLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Email Label -->
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="17dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/manrope_semibold"
                app:layout_constraintTop_toBottomOf="@id/welcomeText"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/emailInput"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_10dp_corner_round"
                android:backgroundTint="@color/black_303030"                android:hint="@string/enter_email"
                android:textColorHint="@color/gray_hint"
                android:paddingVertical="13dp"
                android:paddingHorizontal="8dp"
                android:fontFamily="@font/manrope_regular"
                android:textSize="16sp"
                android:textColor="@color/light_white"
                android:text="@={viewModel.email}"
                app:layout_constraintTop_toBottomOf="@id/emailLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Password Label -->
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="17dp"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/manrope_semibold"
                app:layout_constraintTop_toBottomOf="@id/emailInput"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Password Layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_10dp_corner_round"
                android:backgroundTint="@color/black_303030"                app:layout_constraintTop_toBottomOf="@id/passwordLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_passowrd"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:paddingVertical="13dp"
                    android:paddingHorizontal="8dp"
                    android:fontFamily="@font/manrope_regular"
                    android:textSize="16sp"
                    android:textColor="@color/light_white"
                    android:textColorHint="@color/gray_hint"
                    android:text="@={viewModel.password}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/password_toggle" />

                <ImageView
                    android:id="@+id/password_toggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/close_eye_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Terms and Conditions Layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llTermsConditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <CheckBox
                    android:checked="@={viewModel.isTermsChecked}"
                    android:id="@+id/checkTerms"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:buttonTint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvTermsConditions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/i_agree_to_terms_amp_conditions_and_privacy_policy_of_the_app"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/manrope_regular"
                    app:layout_constraintTop_toTopOf="@id/checkTerms"
                    app:layout_constraintStart_toEndOf="@id/checkTerms"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/MyButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="104dp"
                android:paddingVertical="18dp"
                android:text="@string/login"
                android:onClick="@{viewModel::onClick}"
                app:layout_constraintTop_toBottomOf="@id/llTermsConditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/theme"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/manrope_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton"/>

            <TextView
                android:id="@+id/tvOrWith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white"
                android:text="@string/or_with"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/manrope_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:elevation="2dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_login_edittext"
                app:layout_constraintTop_toBottomOf="@id/tvOrWith">

                <ImageView
                    android:id="@+id/ivGoogle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_google"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:fontFamily="@font/manrope_semibold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivGoogle"
                    app:layout_constraintTop_toTopOf="@id/ivGoogle"
                    app:layout_constraintBottom_toBottomOf="@id/ivGoogle"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDontHaveAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white"
                android:text="Don’t have an account ? Sign Up"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/manrope_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clGoogleLogin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
