<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:background="@color/screen_background_black"
        tools:context=".ui.signup.fragment.EmailFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/back_button_pink"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/manrope_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvForgotDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Please enter your email to reset the password"
                    android:textColor="@color/textDescColor"
                    android:layout_marginTop="15dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
                    android:fontFamily="@font/manrope_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/manrope_semibold"
                    app:layout_constraintTop_toBottomOf="@id/tvForgotDesc"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Email Input -->
                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_10dp_corner_round"
                    android:backgroundTint="@color/black_303030"                    android:hint="@string/enter_you_email"
                    android:textColorHint="@color/gray_hint"
                    android:paddingVertical="13dp"
                    android:paddingHorizontal="8dp"
                    android:fontFamily="@font/manrope_regular"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/light_white"
                    app:layout_constraintTop_toBottomOf="@id/emailLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnResetPassword"
                    style="@style/MyButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="104dp"
                    android:paddingVertical="18dp"
                    android:text="@string/reset_password"
                    app:layout_constraintTop_toBottomOf="@id/emailInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </LinearLayout>
</layout>