<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/screen_background_black"
        tools:context=".ui.signup.fragment.EmailFragment">

        <ImageView
            android:layout_marginStart="20dp"
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:src="@drawable/back_button_pink"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ScrollView
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivBack"
            app:layout_constraintBottom_toTopOf="@id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSetNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Set a new password"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/manrope_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvSetNewPasswordDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Create a new password. Ensure it differs from previous ones for security"
                    android:textColor="@color/textDescColor"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/manrope_regular"
                    app:layout_constraintTop_toBottomOf="@id/tvSetNewPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>



                <!-- Password Label -->
                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="New Password"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/manrope_semibold"
                    app:layout_constraintTop_toBottomOf="@id/tvSetNewPasswordDesc"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Password Layout -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_10dp_corner_round"
                    android:backgroundTint="@color/black_303030"                    app:layout_constraintTop_toBottomOf="@id/passwordLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:paddingVertical="13dp"
                        android:paddingHorizontal="8dp"
                        android:fontFamily="@font/manrope_regular"
                        android:textSize="16sp"
                        android:textColor="@color/light_white"
                        android:textColorHint="@color/gray_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/password_toggle" />

                    <ImageView
                        android:id="@+id/password_toggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        app:tint="@color/white"
                        android:src="@drawable/close_eye_2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Password Label -->
                <TextView
                    android:id="@+id/cnfPwdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/confirm_new_password"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/manrope_semibold"
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Password Layout -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/CnfPasswordLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/background_10dp_corner_round"
                    android:backgroundTint="@color/black_303030"                    app:layout_constraintTop_toBottomOf="@id/cnfPwdLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <EditText
                        android:id="@+id/etCnfpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enter_confirm_new_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:paddingVertical="13dp"
                        android:paddingHorizontal="8dp"
                        android:fontFamily="@font/manrope_regular"
                        android:textSize="16sp"
                        android:textColor="@color/light_white"
                        android:textColorHint="@color/gray_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cnfPwdToggle" />

                    <ImageView
                        android:id="@+id/cnfPwdToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        app:tint="@color/white"
                        android:src="@drawable/close_eye_2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btnChangePassword"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="25dp"
            android:paddingVertical="18dp"
            android:text="Change Password"
            android:fontFamily="@font/manrope_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>